[package]
name = "cost-modeller"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = "0.14.0"
plotters-iced = "0.11.0"
regex = "1.12.2"
reqwest = { version = "0.13.1", features = ["blocking"] }
serde = "1.0.228"
serde_json = "1.0.149"

[dev-dependencies]
rstest = "0.26.1"
pretty_assertions = "1.4.1"
